add - сохранение файла, метод вывода успешного диалогового окна change - имя класса BruteForceDecryptor.java